Refactor video playback and add series screen integration
Revised video player logic to support live streams and playback error handling. Introduced a new series screen for browsing video collections, enhanced scaling utility for responsive design, and improved UI elements like focusable buttons. Removed unused hooks and Husky configs.

--- a/app.json
+++ b/app.json
@@ -39,8 +39,8 @@
           "androidExtensions": {
             "useExoplayerRtsp": false,
             "useExoplayerSmoothStreaming": true,
-            "useExoplayerHls": false,
-            "useExoplayerDash": false
+            "useExoplayerHls": true,
+            "useExoplayerDash": true
           }
         }
       ]
